package logo;

public class Candy extends Decoration {

    public Candy(int x, int y, Logo l) {
        super("src/img/Candy.png", 0d, l, x, y);
    }
}
