package logo;

public class Chapeau extends Decoration {

    public Chapeau(int x, int y, Logo l) {
        super("src/img/Chapeau.png", 1d, l, x, y);
    }
}
