package logo;

public class Lunette extends Decoration {

    public Lunette(int x, int y, Logo l) {
        super("src/img/Sunglasses.png", 1d, l, x, y);
    }
}
