package logo;

public class Smiley extends Decoration {

    public Smiley(int x, int y, Logo l) {
        super("src/img/Smiley.png", 0d, l, x, y);
    }
}
