@startuml

abstract Logo {
    # nom: String
    # prix: Double
    + abstract getLogo(): MyImage
    + abstract combienCaCoute(): double
}
class ReneLaTaupe {
    + ReneLaTaupe()
    + getLogo(): MyImage
    + combienCaCoute(): double
}
abstract class Decoration {
    # x
    # y
    + Decoration(Logo)
    + getLogo(): MyImage
    + combienCaCoute(): double
}
class Smiley {
    + Decoration(Logo)
}
class Candy {
    + Decoration(Logo)
}
class CrazyFrog {
    + Decoration(Logo)
    + getLogo(): MyImage
    + combienCaCoute(): double
}
class Chapeau {
    + Decoration(Logo)
}
class Lunette {
    + Decoration(Logo)
}

Logo <|-- ReneLaTaupe
Logo <|-- CrazyFrog
Logo <|-- Decoration
Decoration <|-- Chapeau
Decoration <|-- Smiley
Decoration <|-- Candy
Decoration <|-- Lunette
Decoration "*" --> "1" Logo: - logo

@enduml